--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "react-quiz",
   "version": "0.1.0",
   "author": "AykutSarac",
-  "homepage": "https://aykutsarac.github.io/react-quiz/",
+  "homepage": "https://charitha95.github.io/clementine_ama",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
-    "gh-pages": "^3.1.0",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
